--- a/Newfile/works/css/Youeh.scss
+++ b/Newfile/works/css/Youeh.scss
@@ -34,6 +34,16 @@ nav {
                 font-size: 14px;
                 margin-left: 25px;
             }
+            .hidden-1200{
+                @media (max-width:1200px) {
+                    display: none;
+                }
+                .function-ul{
+                    list-style: none;
+                    padding: 10px 20px 10px 10px;
+                    border: #cfcece 1px solid;
+                }
+            }
 
             .icons {
                 display: flex;
@@ -63,6 +73,11 @@ nav {
 
             .bugar {
                 display: none;
+                @media (max-width:1200px) {
+                    font-size: 20px;
+                    display: block;
+                    
+                }
             }
         }
     }
